2004-04-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/action.[hg|ccg]: Added set_sensitive(), even though
	it does not exist in GTK+ itself yet. Spotted by Matthew Walton.

2.3.7:

2004-03-28  Bryan Forbes  <bryan@reigndropsfall.net>

	* gtk/src/action.[hg|ccg]:
	* tools/m4/convert_gtk.m4: changed Action::create_menu_item(), 
	create_tool_item(), and create_icon() to return Gtk::MenuItem*, 
	Gtk::ToolItem*, and Gtk::Image respectively, rather than Gtk::Widget*.

2004-03-28  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/uimanager.ccg: Fix typo to fix the build.
	* */src/*_methods.defs: Regenerated with h2defs.py.

2004-03-28  Murray Cumming  <murrayc@murrayc.com>

	* *_docs_override.xml: Added several overrides to remove references to
	0 parameters and freeing of strings.
	* atk/src/table.hg: Added const versions of some get_*() methods.

2004-03-25  Andrew E. Makeev  <andrew@solvo.ru>

	* gtk/src/treeview.hg, gtk/src/treeview.ccg: Added 
	move_column_to_start(), which uses gtk_tree_view_move_column_after() 
	with a 0 parameter.

2004-03-26  Elijah Newren  <newren@math.utah.edu>
 
 	* docs/tutorial/gtkmm-tut.xml: Several simple fixes. 

2004-03-27  Murray Cumming  <murrayc@murrayc.com>

	* example/book/: Added menus_and_toolbars example that uses UIManager.
	The book should probably stop using the other menu and toolbar examples
	and they should be moved away.

2004-03-27  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/action.ccg, toggleaction.ccg, radioaction.ccg: 
	Constructor: Give GTK+ 0 instead of "" for default labels and tooltips,
	so that the stock ones are used.

2004-03-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/filefilter.[hg|ccg]: Wrapped filefilter as a GtkObject 
	instead of a GObject, because it is a GtkObject.
	* examples/book/dialogs/filechooserdialog/: Used filefilter.

2004-03-25  Bryan Forbes  <bryan@reigndropsfall.net>

	* gtk/src/messagedialog.[hg|ccg]: removed use_separator parameter from