@@ -49,7 +49,7 @@ class ListStore :
   _IMPLEMENTS_INTERFACE(TreeSortable)
   _IMPLEMENTS_INTERFACE(TreeDragSource)
   _IMPLEMENTS_INTERFACE(TreeDragDest)
-  _IGNORE(gtk_list_store_insert_before, gtk_list_store_insert_after,
+  _IGNORE(gtk_list_store_insert_after,
           gtk_list_store_prepend, gtk_list_store_append, gtk_list_store_set_value,
           gtk_list_store_insert,
           gtk_list_store_set, gtk_list_store_set_valist,
@@ -85,7 +85,7 @@ public:
   _IGNORE(gtk_list_store_remove)
 
   //TODO: Make this documentation similar to documentation for Standard C++ insert methods.
-  /** Creates a new row at position.
+  /** Creates a new row before the position.
    * If iter is end() then a new row will be appended to the list.
    * The row will be empty - to fill in values, you need to dereference the returned iterator and use Row::operator[] or Row::set_value().
    * See also prepend() and append().
@@ -94,7 +94,20 @@ public:
    * @result An iterator to the new row. 
    */
   iterator insert(const iterator& iter);
+  _IGNORE(gtk_list_store_insert_before)
 
+  //TODO: Docs. This one is apparently faster.
+  /** Creates a new row after the position.
+   * If iter is end() then a new row will be prepended to the list.
+   * The row will be empty - to fill in values, you need to dereference the returned iterator and use Row::operator[] or Row::set_value().
+   * See also insert(), prepend() and append().
+   *
+   * @param iter An iterator to the row after which the new row will be inserted.
+   * @result An iterator to the new row.
+   */
+  iterator insert_after(const iterator& iter);
+  _IGNORE(gtk_list_store_insert_after)
+  
   /** Creates a new row at the start.
    * The row will be empty - to fill in values, you need to dereference the returned iterator and use Row::operator[] or Row::set_value().
    * See also insert() and append().
