@@ -64,6 +64,21 @@ TreeModel::iterator TreeStore::insert(const iterator& iter)
   return new_pos;
 }
 
+TreeModel::iterator TreeStore::insert_after(const iterator& iter)
+{
+  iterator new_pos (this);
+
+  gtk_tree_store_insert_after(
+      gobj(), new_pos.gobj(),
+      const_cast<GtkTreeIter*>(iter.get_parent_gobject_if_end()),
+      const_cast<GtkTreeIter*>(iter.get_gobject_if_not_end()));
+
+  if(new_pos.gobj()->stamp == 0)
+    new_pos.setup_end_iterator(iter);
+
+  return new_pos;
+}
+
 TreeModel::iterator TreeStore::prepend()
 {
   iterator new_pos (this);
