@@ -46,8 +46,8 @@ class TreeStore :
   _IMPLEMENTS_INTERFACE(TreeSortable)
   _IMPLEMENTS_INTERFACE(TreeDragSource)
   _IMPLEMENTS_INTERFACE(TreeDragDest)
-  _IGNORE(gtk_tree_store_set, gtk_tree_store_set_valist, gtk_tree_store_insert_after,
-          gtk_tree_store_insert_before, gtk_tree_store_insert, gtk_tree_store_append, gtk_tree_store_prepend,
+  _IGNORE(gtk_tree_store_set, gtk_tree_store_set_valist,
+          gtk_tree_store_insert, gtk_tree_store_append, gtk_tree_store_prepend,
           gtk_tree_store_reorder, gtk_tree_store_move_after, gtk_tree_store_move_before)
 
 protected:
@@ -79,7 +79,7 @@ public:
   _IGNORE(gtk_tree_store_remove)
 
   //TODO: Make this documentation similar to documentation for Standard C++ insert methods.
-  /** Creates a new row at position.
+  /** Creates a new row before the position.
    * If iter is end() then a new row will be appended to the list.
    * The row will be empty - to fill in values, you need to dereference the returned iterator and use Row::operator[] or Row::set_value().
    * See also prepend() and append().
@@ -88,6 +88,18 @@ public:
    * @result An iterator to the new row.
    */
   iterator insert(const iterator& iter);
+  _IGNORE(gtk_tree_store_insert_before)
+
+  /** Creates a new row after the position.
+   * If iter is end() then a new row will be prepended to the list.
+   * The row will be empty - to fill in values, you need to dereference the returned iterator and use Row::operator[] or Row::set_value().
+   * See also prepend() and append().
+   *
+   * @param iter An iterator to the row after which the new row will be inserted.
+   * @result An iterator to the new row.
+   */
+  iterator insert_after(const iterator& iter);
+  _IGNORE(gtk_tree_store_insert_after)
 
   /** Creates a new row at the start of the top-level.
    * The row will be empty - to fill in values, you need to dereference the returned iterator and use Row::operator[] or Row::set_value().
