@@ -1,3 +1,8 @@
+2004-04-03  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/liststore.[hg|ccg], treestore.[hg|ccg]: Added insert_after(),
+	because it is apparently faster with many rows. Bug #131019.
+
 2004-04-01  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/action.[hg|ccg]: Added set_sensitive(), even though
